--- a/README.org
+++ b/README.org
@@ -1,7 +1,8 @@
 #+TITLE:My Homepage
-[[./res/HTML.png]]
+[[./res/homepage.png]]
 * Credits
 - float.gif : [[https://www.deviantart.com/dav-19/art/Pixel-Yui-326815301][dav-19]]
 - font: Overpass
 - search: LibreX (https://search.zeroish.xyz)
 - weather: [[https://wttr.in][wttr.in]]
+- youtube, mastodon and discord icon: fontawesome
